    * 4012 FIX: Fixed broken windows MSI packages (Installer error 2725)...

    Multisite:
    * 4169 View action: Default values of sticky, notification and persistent options can now be configured via global settings....
    * 4229 New Web GUI logging configuration...
    * 4011 Quicksearch: Introduced new filters tg, ad and al...
    * 4143 FIX: Fixed possible log spam "MKAuthException: Invalid credentials" in web.log...
    * 4004 FIX: Fixed exception when viewing availability of BI aggregations...
    * 4144 FIX: Sidebar: Bottom of last snapin was not 100% visible
    * 4145 FIX: Fixed exception when setting output_format in wrong case
    * 4220 FIX: WATO folder filter: improve output of unknown folders
    * 4226 FIX: Custom inventory painters are now correctly loaded when declared with inventory_displayhints
    * 4228 FIX: Context links to HW/SW inventory views are only shown when useful

    WATO:
    * 4142 New extended search dialog for rulesets and rules...
    * 4217 WATO rules can now be moved via drag&drop...
    * 4227 New manual WATO configuration lock mechanism...
    * 4003 FIX: esx_vsphere_objects: fixed check parameters display bug during WATO service discovery
    * 4146 FIX: Fixed broken "Global settings" when having the Event Console disabled via "omd config"
    * 4218 FIX: Disabling replication with a site did not clear the changes for this site (1.4.0i3 regression)
    * 4221 FIX: Fixed "analyse parameters" page for services with umlauts in names
    * 4222 FIX: Services of host page: Fixed encoding issue for hosts with umlauts in alias
    * 4223 FIX: Fixed possible g_host_attribute related AttributeError exception
    * 4224 FIX: Improved exception handling during WATO slave site activation
    * 4237 FIX: Fixed rendering of old timestamps...
    * 4231 FIX: Fixed broken host renaming when files are in var/check_mk/web

    Notifications:
    * 4197 FIX: Fix sending notification to global fallback email address

    BI: