@@ -1,0 +1,9 @@
+Title: Performance snapins: Added site selection field to all performance snapins
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.4.0i4
+Date: 1484662169
+Class: feature
+
+
