@@ -61,6 +61,7 @@
     * 4169 View action: Default values of sticky, notification and persistent options can now be configured via global settings....
     * 4229 New Web GUI logging configuration...
     * 4011 Quicksearch: Introduced new filters tg, ad and al...
+    * 4279 Performance snapins: Added site selection field to all performance snapins
     * 4143 FIX: Fixed possible log spam "MKAuthException: Invalid credentials" in web.log...
     * 4004 FIX: Fixed exception when viewing availability of BI aggregations...
     * 4144 FIX: Sidebar: Bottom of last snapin was not 100% visible
